--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -65,3 +65,57 @@
     width: 80%;
     height: 175%;
 }
+
+#top-bar .header {
+    position: relative;
+    background: #55286f;
+    margin: auto;
+    width: 75%;
+    height: 100px;
+    -moz-border-radius: 0 0 18px 18px;
+    -webkit-border-radius: 0 0 18px 18px;
+    border-radius: 0 0 18px 18px;
+    font-size: 0px;
+    color: #ffffff;
+}
+
+#top-bar .header .title{
+    position: relative;
+    display: inline-block;
+    width: 25%;
+    height: 100%;
+}
+
+#top-bar .header h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -47px;
+    font-size: 38px;
+    background: #55286f;
+
+}
+
+#top-bar .header .subtitle{
+    position: relative;
+    display: inline-block;
+    width: 75%;
+    height: 100%;
+}
+
+#top-bar .header h2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -64px;
+    font-size: 38px;
+    background: #55286f;
+}
+#top-bar .header h3 {
+    font-size: 20px;
+    margin: 0;
+    color: orange;
+    background: black;
+}
