--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -70,7 +70,7 @@
     position: relative;
     background: #55286f;
     margin: auto;
-    width: 75%;
+    width: 85%;
     height: 75%;
     -moz-border-radius: 0 0 18px 18px;
     -webkit-border-radius: 0 0 18px 18px;
@@ -134,4 +134,13 @@
 #top-bar .content-container .tab-button:hover {
     color: #ffffff;
     background: #f42272;
+}
+
+#top-bar .content-container .content {
+    font-size: 14px;
+    margin: 20px 7.5%;
+}
+
+#top-bar .content-container .content a {
+    color: #55286f;
 }
