--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -152,18 +152,22 @@
 }
 
 .content .large-list-item div {
+    vertical-align: top;
     display: inline-block;
     font-size: 16px;
 }
 
 .content .large-list-item .column1 {
+    font-size: 20px;
     width: 25%;
 }
 
 .content .large-list-item .column2 {
+    font-size: 14px;
     width: 15%;
 }
 
 .content .large-list-item .column3 {
+    font-size: 16px;
     width: 60%;
 }
