--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -155,6 +155,12 @@
     vertical-align: top;
     display: inline-block;
     font-size: 16px;
+    padding-left: 6px;
+    }
+
+.content .large-list-item div:first-child {
+    padding-left: 0;
+    margin-left: 0;
 }
 
 .content .large-list-item .column1 {
@@ -163,11 +169,11 @@
 }
 
 .content .large-list-item .column2 {
-    font-size: 14px;
+    font-size: 12px;
     width: 15%;
 }
 
 .content .large-list-item .column3 {
-    font-size: 16px;
+    font-size: 14px;
     width: 60%;
 }
