--- a/css/header.css
+++ b/css/header.css
@@ -24,9 +24,9 @@ header h1.small-heading {
 	margin: 0;
 	padding: 5px 8px;
 	background-color: #55286f;
-	-moz-border-radius:00 10px 10px;
-	-webkit-border-radius:00 10px 10px;
-	border-radius:00 10px 10px;
+	-moz-border-radius:0 0 10px 10px;
+	-webkit-border-radius:0 0 10px 10px;
+	border-radius:0 0 10px 10px;
 	border: 2px solid #d8b4e2;
 	border-top: 0;
 	text-align: center;
@@ -104,17 +104,17 @@ header .nav-button:hover {
 header .nav-button.previous {
 	left: 0;
 	border-left: 0;
-	-moz-border-radius:0 7px 7px0;
-	-webkit-border-radius:0 7px 7px0;
-	border-radius:0 7px 7px0;
+	-moz-border-radius:0 7px 7px 0;
+	-webkit-border-radius:0 7px 7px 0;
+	border-radius:0 7px 7px 0;
 	padding: 9px 10px 9px 9px;
 }
 
 header .nav-button.next {
 	right: 0;
 	border-right: 0;
-	-moz-border-radius: 7px00 7px;
-	-webkit-border-radius: 7px00 7px;
-	border-radius: 7px00 7px;
+	-moz-border-radius: 7px 0 0 7px;
+	-webkit-border-radius: 7px 0 0 7px;
+	border-radius: 7px 0 0 7px;
 	padding: 9px 9px 9px 10px;
 }
